/*
 * This protobuf file contains the services and message definitions of all
 * methods used by drand nodes to produce distributed randomness.
 *
*/
syntax = "proto3";

package drand;

/*option go_package = "github.com/drand/drand/protobuf/drand";*/
option go_package = "drand";

import "crypto/dkg/dkg.proto";
import "drand/common.proto";

service Protocol {
    rpc PrepareDKGGroup(PrepareDKGPacket) returns (drand.Empty);
    rpc PushDKGGroup(PushGroupPacket) returns (drand.Empty);
    // Setup is doing the DKG setup phase
    rpc FreshDKG(DKGPacket) returns (drand.Empty);
    // Reshare performs the resharing phase
    rpc ReshareDKG(ResharePacket) returns (drand.Empty);
    // PartialBeacon sends its partial beacon to another node
    rpc PartialBeacon(PartialBeaconPacket) returns (drand.Empty);
    rpc SyncChain(SyncRequest) returns (stream BeaconPacket);
}

// PrepareDKGPacket is the packet nodes send to a coordinator that collects all
// keys and setups the group and sends them back to the nodes such that they can
// start the DKG automatically.
message PrepareDKGPacket {
    Identity node = 1;
    // following parameters are helpful if leader and participants did not run
    // with the same parameters, so the leader can reply if it's not consistent.
    uint32 expected = 2;
    uint32 threshold = 3;
    uint64 dkg_timeout = 4;
    string secret_proof = 5;
    // In resharing cases, previous_group_hash is the hash of the previous group.
    // It is to make sure the nodes build on top of the correct previous group.
    string previous_group_hash = 6;
    // XXX uint32 period could be added to make sure nodes agree on the beacon
    // frequency but it's not bringing real security on the table so leave it
    // for now.
}

message PushGroupPacket {
    drand.GroupPacket new_group = 1;
    string secret_proof = 2;
}

message PartialBeaconPacket {
    // Round is the round for which the beacon will be created from the partial
    // signatures
    uint64 round = 1;
    // PreviousRound is the round for which the beacon is building on top of
    // from.
    uint64 previous_round = 2;
    bytes partial_sig = 3;
    bytes previous_sig = 4;
}

message DKGPacket {
    dkg.Packet dkg = 1;
}

message ResharePacket {
    dkg.Packet dkg = 1;
}

// SyncRequest is from a node that needs to sync up with the current head of the
// chain
message SyncRequest {
    uint64 from_round = 1;
}

message BeaconPacket {
    uint64 previous_round = 1;
    bytes previous_sig = 2;
    uint64 round = 3;
    bytes signature = 4;
}
